# pastryjoy

./: .gitignore
backend/: .env.example  .gitignore  alembic.ini  create_admin.py  init_db.py  pyproject.toml
backend/.claude/: settings.local.json
backend/alembic/: env.py
backend/alembic/versions/: 001_add_preferred_language_to_users.py
backend/src/: __init__.py
backend/src/application/: __init__.py
backend/src/application/dtos/: __init__.py  auth_dto.py  ingredient_cost_dto.py  ingredient_dto.py  order_dto.py  product_dto.py  recipe_dto.py  user_settings_dto.py
backend/src/domain/entities/: __init__.py  base.py  ingredient.py  ingredient_cost.py  order.py  order_item.py  product.py  recipe.py  recipe_ingredient.py  user.py
backend/src/domain/repositories/: __init__.py  base_repository.py  ingredient_cost_repository.py  (+5 more)
backend/src/infrastructure/: __init__.py
backend/tests/: conftest.py  test_api_comprehensive.py  test_api_errors.py  test_auth.py  test_auth_security.py  test_constants.py  test_cors.py  test_helpers.py  test_ingredients.py  test_orders.py  test_products.py  test_recipes.py  test_routes_edge_cases.py  test_routes_validation.py
backend/tests/api/: test_users_endpoints.py
backend/tests/integration/: test_ingredient_repository.py  test_order_repository.py  test_product_repository.py  test_recipe_repository.py  test_user_repository.py  test_user_repository_settings.py
backend/tests/unit/: test_domain_entities.py  test_entities.py  test_mappers.py  test_repositories_coverage.py  test_security.py  test_value_objects.py
(+147 files in other folders)
